--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: elixir
 elixir:  1.9.2
 otp_release: 22.1.3
+services:
+  - postgresql
 script: mix check
 before_script:
   - travis_wait mix dialyzer --plt
