--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ elixir: 1.9.2
 otp_release: 22.0.7
 services:
 - postgresql
-script: mix check
-before_script:
-- travis_wait mix dialyzer --plt
+script: mix check --except dialyzer
 cache:
   directories:
   - _build
